[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/UpgradeSelect.gd" type="Script" id=2]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;
uniform float multiplier = 0.2;
uniform float softness = 0.2;

void fragment()
{
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 3 )
shader_param/color = null
shader_param/multiplier = 0.0
shader_param/softness = 1.446

[node name="UpgradeSelect" type="Control" groups=["HUD"]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.101961, 0.101961, 0.301961 )

[node name="Cards" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Cards"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -280.0
margin_bottom = -242.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Choose your upgrade!"
align = 1

[node name="Amount" type="Label" parent="Cards"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -231.0
margin_bottom = -193.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Choose  0"
align = 1

[node name="UpgradeCard1" type="ColorRect" parent="Cards"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -472.0
margin_top = -104.0
margin_right = -172.0
margin_bottom = 146.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Title" type="Label" parent="Cards/UpgradeCard1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -192.0
grow_horizontal = 2
text = "Upgrade 1"
align = 1

[node name="Description" type="Label" parent="Cards/UpgradeCard1"]
margin_left = 8.0
margin_top = 72.0
margin_right = 408.0
margin_bottom = 223.0
rect_scale = Vector2( 0.7, 0.7 )
autowrap = true

[node name="Button1" type="Button" parent="Cards/UpgradeCard1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -44.0
text = "Choose upgrade"

[node name="UpgradeCard2" type="ColorRect" parent="Cards"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Title" type="Label" parent="Cards/UpgradeCard2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -192.0
grow_horizontal = 2
text = "Upgrade 2"
align = 1

[node name="Description" type="Label" parent="Cards/UpgradeCard2"]
margin_left = 8.0
margin_top = 72.0
margin_right = 408.0
margin_bottom = 223.0
rect_scale = Vector2( 0.7, 0.7 )
autowrap = true

[node name="Button2" type="Button" parent="Cards/UpgradeCard2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -44.0
text = "Choose upgrade"

[node name="UpgradeCard3" type="ColorRect" parent="Cards"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 176.0
margin_top = -104.0
margin_right = 476.0
margin_bottom = 146.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Title" type="Label" parent="Cards/UpgradeCard3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -192.0
grow_horizontal = 2
text = "Upgrade 3"
align = 1

[node name="Description" type="Label" parent="Cards/UpgradeCard3"]
margin_left = 8.0
margin_top = 72.0
margin_right = 408.0
margin_bottom = 223.0
rect_scale = Vector2( 0.7, 0.7 )
autowrap = true

[node name="Button3" type="Button" parent="Cards/UpgradeCard3"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -44.0
text = "Choose upgrade"

[node name="SkipButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -72.0
margin_right = -26.0
margin_bottom = -22.0
rect_min_size = Vector2( 150, 50 )
text = "Skip"

[connection signal="pressed" from="Cards/UpgradeCard1/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Cards/UpgradeCard2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Cards/UpgradeCard3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]
